# RadCat

./: Buid_The_Program.bat  Build Program.bat  CMakeLists.txt  MyProgram.spec  README.md  Test Program Without Build.bat  Update Python Library.bat  setup.py
3rd_Party_Stuff/Mini-X API/Mini-X API/: MiniX.exp  MiniX.lib  modMiniX.vb
3rd_Party_Stuff/Mini-X API/Mini-X API/debug/: MiniX.exp  MiniX.map
3rd_Party_Stuff/Mini-X API/vbMiniX/: frmMiniX.frx  vbMiniX.vbp  vbMiniX.vbw
3rd_Party_Stuff/Mini-X API/vbMiniX/XpRes/: XpStylesReadMe.txt  vbMiniX.exe.manifest  vbMiniX.res  vbMiniXRes.bat
3rd_Party_Stuff/Mini-X API/vbNetMiniX/: frmMiniX.resX  vbMiniX.aps  vbMiniX.vbproj
3rd_Party_Stuff/Mini-X API/vcMiniX/: LimitSingleInstance.h  MiniX.aps  MiniX.cpp  MiniX.h  MiniX.sln  MiniX.vcproj  MiniXDlg.h  resource.h
3rd_Party_Stuff/Mini-X API/vcMiniX/Controls/: Sxbutton.cpp  Sxbutton.h  VersionInfo.cpp
3rd_Party_Stuff/Mini-X API/vcMiniX/Debug/: MiniX.exp  MiniX.map
3rd_Party_Stuff/Mini-X API/vcMiniX/Release/: BuildLog.htm  MiniX.exp  MiniX.lib  MiniX.res
3rd_Party_Stuff/Mini-X API/vcMiniX/XpRes/: MiniXCtrl.exe.manifest  xpsRC.rc
3rd_Party_Stuff/Mini-X API/vcMiniX/res/: MiniX.rc2
API's/Mini-X API/: Mini-X API File List.htm
API's/Mini-X API/Mini-X API/: MiniX.res  MiniXAPI.h
API's/Mini-X API/Mini-X API/debug/: MiniX.lib  MiniX.res
API's/Mini-X API/vbMiniX/: MiniXLog.txt  frmMiniX.frm  modMiniX.bas
API's/Mini-X API/vbMiniX/XpRes/: modXpStyles.bas  vbMiniX.rc
API's/Mini-X API/vbNetMiniX/: AssemblyInfo.vb  ProjectResources.resx  frmMiniX.vb  vbMiniX.sln
API's/Mini-X API/vcMiniX/: DeleteVcIntermediateFiles.bat  MiniX.ncb  MiniX.rc  MiniXDlg.cpp  StdAfx.cpp
API's/Mini-X API/vcMiniX/Controls/: ColorControls.cpp  ColorControls.h  VersionInfo.h
API's/Mini-X API/vcMiniX/Debug/: BuildLog.htm  MiniX.lib  MiniX.res
API's/Mini-X API/vcMiniX/XpRes/: xpsResource.h
Not Implemented Yet/: ParsePacket.cpp
OutSrc/C++ Shared/: AsciiCmdUtilities.h  DP5Status.h
PythonProgram/: OSImportManager.py  UserInterface.py
pystuff/: CMakeLists.txt  wrapper.cpp
pyt/: OSImportManager.py  UserInterface.py  YDYTU1_py.cp313-win_amd64.pyd  YDYTU1_py.cp39-win_amd64.pyd  main.py
src/: App.cpp  App.hpp  CMakeLists.txt  DataIOHandler.cpp  DataIOHandler.hpp  Debug.hpp  Includes.hpp  QTHandler.cpp  QTHandler.hpp  TimeManager.cpp  TimeManager.hpp  ftd2xx.h  main.cpp  minixc.cpp  minixc.hpp  minxUtils.cpp  minxUtils.hpp  pyManager.cpp  pyManager.hpp  udpHandler.cpp  udpHandler.hpp  utilities.cpp  utilities.hpp  wrapper.cpp
src/devices/: baseDevice.hpp  deviceCore.hpp  deviceHandler.cpp  deviceHandler.hpp  deviceRegistry.hpp  minixDevice.cpp  minixDevice.hpp
src/devices/comps/: FTDIConnection.cpp  FTDIConnection.hpp  allComponents.hpp  componentCore.hpp  minxUtils.cpp  minxUtils.hpp
